--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,5 +22,6 @@ services:
       - POSTGRES_DB=fiap
     volumes:
       - db_data:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 volumes:
   db_data:
