--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-Flask==2.3.2
-Flask-RESTful==0.3.9
-Flask-Cors==3.0.10
-Flask-Migrate==3.1.0
-Flask-Script==2.0.6
-Flask-SQLAlchemy==3.0.5
-psycopg2==2.9.6
-SQLAlchemy==1.4.25
-requests==2.26.0
+fastapi
+uvicorn
+SQLAlchemy
+psycopg2-binary
+Pydantic
