--- a/kubernetes/app-service.yaml
+++ b/kubernetes/app-service.yaml
@@ -3,9 +3,12 @@ kind: Service
 metadata:
   name: app
 spec:
+  type: LoadBalancer
   selector:
     app: app
   ports:
-    - port: 80
+    - name: http
+      port: 80
       targetPort: 5000
       protocol: TCP
+      
